Add avalonia ui

--- a/TeamBond.Syntosa.Validation/Libraries/TeamBond.Syntosa.Validation.Core/TeamBond.Syntosa.Validation.Core.csproj
+++ b/TeamBond.Syntosa.Validation/Libraries/TeamBond.Syntosa.Validation.Core/TeamBond.Syntosa.Validation.Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Syntosa.Core" Version="0.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CodeWriter\Properties\" />
+  </ItemGroup>
+
 </Project>
