--- a/TeamBond.Syntosa.Validation/Libraries/TeamBond.Syntosa.Validation.Core/TeamBond.Syntosa.Validation.Core.csproj
+++ b/TeamBond.Syntosa.Validation/Libraries/TeamBond.Syntosa.Validation.Core/TeamBond.Syntosa.Validation.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -8,10 +8,6 @@
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Syntosa.Core" Version="0.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="CodeWriter\Properties\" />
   </ItemGroup>
 
 </Project>
