--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.JsonToSyntosa/TeamBond.Syntosa.Validation.JsonToSyntosa.csproj
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.JsonToSyntosa/TeamBond.Syntosa.Validation.JsonToSyntosa.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,5 +10,11 @@
     <PackageReference Include="Avalonia" Version="0.9.11" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.11" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.11" />
+    <PackageReference Include="NJsonSchema" Version="10.1.23" />
+    <PackageReference Include="NJsonSchema.CodeGeneration.CSharp" Version="10.1.23" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="GeneratedClasses\" />
   </ItemGroup>
 </Project>
