--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.JsonToSyntosa/TeamBond.Syntosa.Validation.JsonToSyntosa.csproj
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.JsonToSyntosa/TeamBond.Syntosa.Validation.JsonToSyntosa.csproj
@@ -10,9 +10,10 @@
     <PackageReference Include="Avalonia" Version="0.9.11" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.11" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.11" />
-    <PackageReference Include="NJsonSchema" Version="10.1.23" />
-    <PackageReference Include="NJsonSchema.CodeGeneration.CSharp" Version="10.1.23" />
+    <PackageReference Include="NJsonSchema" Version="10.1.24" />
+    <PackageReference Include="NJsonSchema.CodeGeneration.CSharp" Version="10.1.24" />
     <PackageReference Include="Syntosa.Core" Version="0.1.0" />
+    <PackageReference Include="TeamBond.Application.Framework" Version="0.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
