--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
@@ -13,10 +13,15 @@
     <PackageReference Include="NJsonSchema" Version="10.1.24" />
     <PackageReference Include="NJsonSchema.CodeGeneration.CSharp" Version="10.1.24" />
     <PackageReference Include="Syntosa.Core" Version="0.1.0" />
-    <PackageReference Include="TeamBond.Application.Framework" Version="0.1.1" />
+    <PackageReference Include="TeamBond.Application.Framework" Version="0.1.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="GeneratedClasses\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
