--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
@@ -13,11 +13,13 @@
     <PackageReference Include="NJsonSchema" Version="10.1.24" />
     <PackageReference Include="NJsonSchema.CodeGeneration.CSharp" Version="10.1.24" />
     <PackageReference Include="Syntosa.Core" Version="0.1.0" />
-    <PackageReference Include="TeamBond.Application.Framework" Version="0.1.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="GeneratedClasses\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\teambond-engine\TeamBond.Engine\Libraries\TeamBond.Application.Framework\TeamBond.Application.Framework.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
