Added login functionality

--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="GeneratedClasses\" />
+    <Folder Include="Settings\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\teambond-engine\TeamBond.Engine\Libraries\TeamBond.Application.Framework\TeamBond.Application.Framework.csproj" />
@@ -25,10 +26,5 @@
     <Compile Update="Views\PrototypeEditorView.axaml.cs">
       <DependentUpon>PrototypeEditorView.axaml</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 </Project>
