--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
@@ -7,19 +7,17 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.9.11" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.9.11" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.11" />
+    <PackageReference Include="Avalonia" Version="0.9.12" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.9.12" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.12" />
     <PackageReference Include="NJsonSchema" Version="10.1.24" />
     <PackageReference Include="NJsonSchema.CodeGeneration.CSharp" Version="10.1.24" />
-    <PackageReference Include="Syntosa.Core" Version="0.1.0" />
+    <PackageReference Include="Syntosa.Core" Version="0.1.1" />
+    <PackageReference Include="TeamBond.Application.Framework" Version="0.1.8" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="GeneratedClasses\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\teambond-engine\TeamBond.Engine\Libraries\TeamBond.Application.Framework\TeamBond.Application.Framework.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Views\PrototypeEditorView.axaml.cs">
