Added global property builder

--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
@@ -22,6 +22,9 @@
     <Compile Update="Views\DomainPrototypeBuilderView.axaml.cs">
       <DependentUpon>DomainPrototypeBuilderView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\GlobalPropertyPrototypeBuilderView.axaml.cs">
+      <DependentUpon>GlobalPropertyPrototypeBuilderView.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\PrototypeEditorView.axaml.cs">
       <DependentUpon>PrototypeEditorView.axaml</DependentUpon>
     </Compile>
