--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/TeamBond.Syntosa.Validation.DataEditor.csproj
@@ -22,6 +22,9 @@
     <Compile Update="Views\EdgeLabelPrototypeBuilderView.axaml.cs">
       <DependentUpon>EdgeLabelPrototypeBuilderView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\PrivatePropertyPrototypeBuilderView.axaml.cs">
+      <DependentUpon>PrivatePropertyPrototypeBuilderView.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\PrivatePropertyKeyPrototypeBuilderView.axaml.cs">
       <DependentUpon>PrivatePropertyKeyPrototypeBuilderView.axaml</DependentUpon>
     </Compile>
