--- a/TeamBond.Syntosa.Validation/Libraries/TeamBond.Syntosa.Validation/TeamBond.Syntosa.Validation.nuspec
+++ b/TeamBond.Syntosa.Validation/Libraries/TeamBond.Syntosa.Validation/TeamBond.Syntosa.Validation.nuspec
@@ -9,7 +9,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>Copyright 2019</copyright>
-    <tags>TeamBond.Lambda.Engine</tags>
+    <tags>TeamBond.Syntosa.Validation</tags>
     <dependencies>
 	    <dependency id="Amazon.Lambda.Core" version="2.0.0" />
     </dependencies>
